--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>Kaco</title>
+    <title>Kaco-shiden</title>
     <meta
       name="description"
       content="Earn more? Discover Kaco Finance, fast-growing DEX on Binance Smart Chain (BSC) and Shiden with the best farms in DeFi."
