--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="🙈 Kaco Finance - fast-growing DEX on BSC and Shiden" />
     <!-- GTAG -->
-    <script>
+    <!-- <script>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
@@ -38,7 +38,7 @@
         j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
         f.parentNode.insertBefore(j, f);
       })(window, document, 'script', 'dataLayer', '%REACT_APP_GTAG%');
-    </script>
+    </script> -->
   </head>
   <body>
     <!-- GTAG (noscript) -->
